--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -1,9 +1,32 @@
 @charset "UTF-8";
 
-body {
-  color: #333;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.4;
-  font-family: 'Nanum Gothic', sans-serif;
+.del {
+  padding-bottom: 120px;
+}
+
+.cart {
+  margin: 0 20%;  
+}
+.cart-title{
+  margin-top: 20px;
+
+ }
+ .cart-top {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart-floating {
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  bottom: 0;
+  background-color: black;
+  color: white;
+}
+
+.order-area {
+  font-size: 25px;
 }
