--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -62,6 +62,11 @@
     overflow: hidden;
   }
   
+  .a-images img {
+    width: 315px;
+    height: 395px;
+  }
+  
   
   a:hover img {
     transform: scale(1.1);  
