--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -1,9 +1,5 @@
 @charset "UTF-8";
 
-.del {
-  padding-bottom: 120px;
-}
-
 .cart {
   margin: 0 20%;  
 }
@@ -18,15 +14,21 @@
   justify-content: space-between;
 }
 
-.cart-floating {
-  position: fixed;
-  width: 100%;
-  height: 100px;
-  bottom: 0;
-  background-color: black;
-  color: white;
-}
+  .cart-floating {
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+    background-color: black;
+    color: white;
+    transition: visibility 0s, opacity 0.2s linear;
+  }
 
+  
+  .cart-floating.hidden {
+    visibility: hidden;
+    opacity: 0;
+  }
 .order-area {
   font-size: 25px;
 }
