--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -98,3 +98,13 @@
   .frm_search {
     display: flex;
   }
+  
+  .coupon_list {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .btn_get_coupon {
+    border: none;
+    background-color: transparent;
+  }
