--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -108,3 +108,8 @@
     border: none;
     background-color: transparent;
   }
+  
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+  }
