231116_lyh_인터셉트추가및헤더수정

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -105,6 +105,7 @@
   .main_list img {
     width: 315px;
     height: 395px;
+    background-size: 50%;
   }
   
   #orderBy {
@@ -113,5 +114,14 @@
   
   .check_coupon {
     width: 128px;
+  }
+  
+  .background_image {
+    position: relative;
+    background-size: 310px 390px;
+  }
+  
+  .soldout {
+    position: absolute;
   }
   
